--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "nanoid": "^3.1.32"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
